2011 Feb 28
 Florian Ragwitz:
    - Support 5.10 and possibly even older versions of perl.

2011 Feb 25
 Florian Ragwitz:
    - Tell PAUSE to not index our dprof/ directory containing test modules.

2011 Feb 25
 Florian Ragwitz:
    - Deprecate this module in favour of Devel::NYTProf.
    - This is the first upload of Devel::DProf directly to CPAN. It's still part
      of the perl core as of version 5.14.0, but it's also deprecated there,
      will warn when being used without installing it from CPAN first, and will
      disappear as a core module in a future version of perl.

2003 Aug 1
 Radu Greab:
  DProf.xs:
    - do not assume that $^P stays unchanged inside the profiled subroutine
  DProf.pm:
    - increase VERSION

2003 Jul 6

 Radu Greab:
  DProf.xs:
    - improved the mapping between subroutines and identifiers
    - do not assume that $^P stays unchanged during the lifetime of the script
    - panic when the profiled subroutine is leaved with goto/last/next
  DProf.pm:
    - document the problem with the subroutines exited with goto/last/next
  t/test{7,8}*
    - added

2003 Jan 8

 Blair Zajac:
  DProf.xs:
    - To avoid core dumps, increase stack size by 10 instead of 5.
    - Assert that g_profstack is large enough when DEBUGGING is defined
  DProf.pm:
    - Bump VERSION.

1999 Jan 8

 Ilya Zakharevich:
  Newer perls: Add PERL_POLLUTE and dTHR.

1998 Nov 10 
This version of DProf should work with older Perls too, but to get
full benefits some patches to 5.004_55 are needed.  Patches take effect 
after new version of Perl is installed, and DProf recompiled.

Without these patches the overhead of DProf is too big, thus the statistic
may be very skewed.

Oct 98:
 Ilya Zakharevich:
  DProf.xs
    - correct defstash to PL_defstash
    - nonlocal exits work
  dprofpp
    - nonlocal exits work
  DProf.pm
    - documentation updated
  t/test6.*
    - added

Nov-Dec 97:
 Jason E. Holt and Ilya Zakharevich:
  DProf.xs