@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution Devel-DProf,
-version 20110228.00:
+version 20110802.00:
 
   a B<DEPRECATED> Perl code profiler
 
