@@ -1,5 +1,5 @@
 name    = Devel-DProf
-version = 20110228.00
+version = 20110802.00
 author  = The Perl 5 Porters
 license = Perl_5
 copyright_holder = The Perl 5 Porters
