@@ -1,3 +1,8 @@
+2011 Aug 02
+ Alexandr Ciornii
+    - search for dprofpp inside bin/ directory
+    - compatibility with perls before deprecate.pm was introduced
+
 2011 Feb 28
  Florian Ragwitz:
     - Support 5.10 and possibly even older versions of perl.
